test(red): 게임 시작 시 카드 두장 배부 테스트